--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up CMake
-      uses: lukka/get-cmake@v1
-
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y g++ ninja-build
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y cmake g++ ninja-build
 
     - name: Configure project
       run: cmake -B build -G Ninja -DCMAKE_CXX_STANDARD=20
