Chore: Limit CI trigger to PRs into dev only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: C++ CI
 
 on:
-  push:
-    branches:
-      - dev
-      - 'feat-*'
-      - 'bug-*'
-      - 'refactor-*'
-      - 'docs-*'
+  # push:
+  #   branches:
+  #     - dev
+  #     - 'feat-*'
+  #     - 'bug-*'
+  #     - 'refactor-*'
+  #     - 'docs-*'
   pull_request:
     branches:
       - dev
